--- a/css/queerryy.css
+++ b/css/queerryy.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 1000px){
+/* @media only screen and (min-width: 1000px){
     .navbar .fas.fa-solid.fa-heart{
         position: absolute;
         left: 16%;
@@ -90,4 +90,8 @@
             right: 247px;
             }
      
+} */
+.navbar .fa.fa-cart-plus.fa-2x  { 
+    font-size: 17px;
+ 
 }
